# primitive_fixed_point_decimal

./: CHANGELOG.md  COMPARISON.md  Cargo.toml  README.md
benches/: README.md  vs_rust_decimal.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: self_proof.rs
src/: calculations.rs  const_scale_fpdec.rs  define_both_fpdecs.rs  define_calculations.rs  define_common.rs  define_convert.rs  define_macro.rs  define_oob_prec.rs  define_oob_prec_fpdec.rs  define_static_prec.rs  define_static_prec_fpdec.rs  fixdec128.rs  fixdec16.rs  fixdec32.rs  fixdec64.rs  fpdec_128.rs  fpdec_16.rs  fpdec_32.rs  fpdec_64.rs  fpdec_inner.rs  inner_i128.rs  inner_shorts.rs  lib.rs  none_prec_common.rs  none_scale_common.rs  oob_fmt.rs  oob_prec_fpdec.rs  oob_prec_fpdec_16.rs  oob_scale_fpdec.rs  rounding_div.rs  static_prec_fpdec.rs  static_prec_fpdec_16.rs  utils.rs
