[package]
name = "primitive_fixed_point_decimal"
version = "0.4.1"
edition = "2021"
authors = ["Wu Bingzheng <wubingzheng@gmail.com>"]
description = "Primitive fixed-point decimal types."
license = "MIT"
repository = "https://github.com/WuBingzheng/primitive_fixed_point_decimal"
documentation = "https://docs.rs/primitive_fixed_point_decimal"
keywords = ["fixed-point", "decimal"]
categories = ["data-structures", "finance", "mathematics"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
int-div-cum-error = "0.2"
num-traits = "0.2"

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true
default-features = false
